--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "x": "babel-node -- index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-node -- test.js"
   },
   "author": "",
   "license": "ISC",
